--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 01:55:04 AM JST 2026
+Sun Jan 11 02:10:03 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.212.132)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Contabo (Tokyo) [0.91 km]: 39.285 ms
+Hosted by Nearoute Limited (Tokyo) [0.91 km]: 34.954 ms
 Testing download speed................................................................................
-Download: 58.23 Mbit/s
+Download: 69.74 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 11.59 Mbit/s
+Upload: 9.66 Mbit/s
