--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 02:10:03 AM JST 2026
+Sun Jan 11 02:15:03 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.212.132)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Nearoute Limited (Tokyo) [0.91 km]: 34.954 ms
+Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 34.69 ms
 Testing download speed................................................................................
-Download: 69.74 Mbit/s
+Download: 26.56 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 9.66 Mbit/s
+Upload: 11.08 Mbit/s
