--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 02:35:03 AM JST 2026
+Sun Jan 11 02:40:04 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.212.132)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 39.668 ms
+Hosted by Contabo (Tokyo) [0.91 km]: 38.448 ms
 Testing download speed................................................................................
-Download: 21.19 Mbit/s
+Download: 29.41 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 16.60 Mbit/s
+Upload: 7.93 Mbit/s
