--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 02:40:04 AM JST 2026
+Sun Jan 11 02:45:04 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.212.132)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Contabo (Tokyo) [0.91 km]: 38.448 ms
+Hosted by Nearoute Limited (Tokyo) [0.91 km]: 46.693 ms
 Testing download speed................................................................................
-Download: 29.41 Mbit/s
+Download: 66.35 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 7.93 Mbit/s
+Upload: 7.73 Mbit/s
