--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 02:55:07 AM JST 2026
+Sun Jan 11 03:10:06 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.212.132)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 31.355 ms
+Hosted by Contabo (Tokyo) [0.91 km]: 44.048 ms
 Testing download speed................................................................................
-Download: 22.30 Mbit/s
+Download: 66.31 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 8.30 Mbit/s
+Upload: 20.52 Mbit/s
