--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 03:45:06 AM JST 2026
+Sun Jan 11 03:50:06 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.212.132)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 39.599 ms
+Hosted by Nearoute Limited (Tokyo) [0.91 km]: 45.888 ms
 Testing download speed................................................................................
-Download: 25.98 Mbit/s
+Download: 56.33 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 13.46 Mbit/s
+Upload: 8.05 Mbit/s
