--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 04:35:05 AM JST 2026
+Sun Jan 11 04:40:05 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.212.132)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 33.127 ms
+Hosted by Contabo (Tokyo) [0.91 km]: 39.08 ms
 Testing download speed................................................................................
-Download: 35.20 Mbit/s
+Download: 51.00 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 27.93 Mbit/s
+Upload: 21.42 Mbit/s
