--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 06:20:06 AM JST 2026
+Sun Jan 11 06:25:06 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.212.132)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 35.992 ms
+Hosted by Contabo (Tokyo) [0.91 km]: 34.818 ms
 Testing download speed................................................................................
-Download: 122.93 Mbit/s
+Download: 83.20 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 29.07 Mbit/s
+Upload: 25.15 Mbit/s
