--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 07:05:07 AM JST 2026
+Sun Jan 11 07:10:05 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 44.397 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 38.453 ms
 Testing download speed................................................................................
-Download: 73.27 Mbit/s
+Download: 130.16 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 31.37 Mbit/s
+Upload: 32.20 Mbit/s
