--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 08:15:04 AM JST 2026
+Sun Jan 11 08:20:04 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 38.348 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 32.216 ms
 Testing download speed................................................................................
-Download: 49.48 Mbit/s
+Download: 102.96 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 31.11 Mbit/s
+Upload: 31.27 Mbit/s
