--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 08:35:03 AM JST 2026
+Sun Jan 11 08:40:03 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 35.04 ms
+Hosted by Contabo (Tokyo) [0.91 km]: 39.438 ms
 Testing download speed................................................................................
-Download: 98.54 Mbit/s
+Download: 131.36 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 30.17 Mbit/s
+Upload: 32.91 Mbit/s
