--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 08:40:03 AM JST 2026
+Sun Jan 11 08:45:03 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Contabo (Tokyo) [0.91 km]: 39.438 ms
+Hosted by GSL Networks (Tokyo) [0.91 km]: 38.687 ms
 Testing download speed................................................................................
-Download: 131.36 Mbit/s
+Download: 167.56 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 32.91 Mbit/s
+Upload: 36.91 Mbit/s
