--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 08:50:04 AM JST 2026
+Sun Jan 11 08:55:04 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by GSL Networks (Tokyo) [0.91 km]: 34.219 ms
+Hosted by Nearoute Limited (Tokyo) [0.91 km]: 35.434 ms
 Testing download speed................................................................................
-Download: 205.22 Mbit/s
+Download: 122.36 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 29.94 Mbit/s
+Upload: 21.31 Mbit/s
