--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 09:20:04 AM JST 2026
+Sun Jan 11 09:25:04 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by GSL Networks (Tokyo) [0.91 km]: 35.971 ms
+Hosted by Contabo (Tokyo) [0.91 km]: 31.442 ms
 Testing download speed................................................................................
-Download: 148.45 Mbit/s
+Download: 121.16 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 27.21 Mbit/s
+Upload: 28.18 Mbit/s
