--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Sun Jan 11 09:35:03 AM JST 2026
+Sun Jan 11 09:40:03 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 36.137 ms
+Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 35.447 ms
 Testing download speed................................................................................
-Download: 75.47 Mbit/s
+Download: 46.95 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 30.07 Mbit/s
+Upload: 28.23 Mbit/s
