--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 10:10:03 AM JST 2026
+Sun Jan 11 10:15:03 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 36.87 ms
-Testing download speed................................................................................
-Download: 80.36 Mbit/s
+Hosted by Rakuten Mobile, Inc (Sanda) [418.45 km]: 32.09 ms
+Testing download speed...............................................................................
+.Download: 126.99 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 28.78 Mbit/s
+Upload: 32.80 Mbit/s
