--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 10:25:04 AM JST 2026
+Sun Jan 11 10:35:04 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 40.523 ms
+Hosted by Rakuten Mobile, Inc (Sanda) [418.45 km]: 26.914 ms
 Testing download speed................................................................................
-Download: 151.60 Mbit/s
+Download: 120.17 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 30.86 Mbit/s
+Upload: 29.91 Mbit/s
