--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 11:25:04 AM JST 2026
+Sun Jan 11 11:35:03 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 34.91 ms
+Hosted by Rakuten Mobile, Inc (Sanda) [418.45 km]: 30.072 ms
 Testing download speed................................................................................
-Download: 94.08 Mbit/s
+Download: 148.11 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 29.07 Mbit/s
+Upload: 28.98 Mbit/s
