--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 04:40:03 PM JST 2026
+Sun Jan 11 04:45:03 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Contabo (Tokyo) [0.91 km]: 39.702 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 35.557 ms
 Testing download speed................................................................................
-Download: 76.57 Mbit/s
+Download: 94.76 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 13.64 Mbit/s
+Upload: 26.95 Mbit/s
