--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 05:55:03 PM JST 2026
+Sun Jan 11 06:10:03 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 36.224 ms
+Hosted by Contabo (Tokyo) [0.91 km]: 38.276 ms
 Testing download speed................................................................................
-Download: 78.47 Mbit/s
+Download: 105.80 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 28.34 Mbit/s
+Upload: 24.31 Mbit/s
