--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Sun Jan 11 06:45:03 PM JST 2026
+Sun Jan 11 06:50:03 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Contabo (Tokyo) [0.91 km]: 33.519 ms
+Hosted by サーバーならDDPS.jp (Tokyo) [0.91 km]: 39.297 ms
 Testing download speed................................................................................
-Download: 65.50 Mbit/s
+Download: 61.71 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 16.90 Mbit/s
+Upload: 19.48 Mbit/s
