--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 07:40:04 PM JST 2026
+Sun Jan 11 07:45:03 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Contabo (Tokyo) [0.91 km]: 44.609 ms
+Hosted by サーバーならDDPS.jp (Tokyo) [0.91 km]: 39.539 ms
 Testing download speed................................................................................
-Download: 108.86 Mbit/s
+Download: 69.05 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 31.81 Mbit/s
+Upload: 13.48 Mbit/s
