--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 09:35:03 PM JST 2026
+Sun Jan 11 09:40:04 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Contabo (Tokyo) [0.91 km]: 34.984 ms
+Hosted by Allied Telesis Capital Corporation (Misawa) [574.25 km]: 47.236 ms
 Testing download speed................................................................................
-Download: 123.18 Mbit/s
+Download: 108.01 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 30.79 Mbit/s
+Upload: 28.55 Mbit/s
