--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Sun Jan 11 10:15:02 PM JST 2026
+Sun Jan 11 10:20:02 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Nearoute Limited (Tokyo) [0.91 km]: 43.165 ms
+Hosted by Kairun Services (Chiba) [38.77 km]: 40.582 ms
 Testing download speed................................................................................
-Download: 110.93 Mbit/s
+Download: 100.82 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 22.59 Mbit/s
+Upload: 29.11 Mbit/s
