--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Mon Jan 12 01:35:03 AM JST 2026
+Mon Jan 12 01:40:03 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by サーバーならDDPS.jp (Tokyo) [0.91 km]: 45.38 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 38.331 ms
 Testing download speed................................................................................
-Download: 41.20 Mbit/s
+Download: 91.10 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 13.32 Mbit/s
+Upload: 35.27 Mbit/s
