--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Mon Jan 12 01:55:04 AM JST 2026
+Mon Jan 12 02:10:04 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 43.8 ms
+Hosted by サーバーならDDPS.jp (Tokyo) [0.91 km]: 53.428 ms
 Testing download speed................................................................................
-Download: 111.67 Mbit/s
+Download: 40.63 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 34.54 Mbit/s
+Upload: 6.50 Mbit/s
