--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Mon Jan 12 02:25:03 AM JST 2026
+Mon Jan 12 02:35:07 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by サーバーならDDPS.jp (Tokyo) [0.91 km]: 41.924 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 38.356 ms
 Testing download speed................................................................................
-Download: 47.55 Mbit/s
+Download: 86.99 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 13.82 Mbit/s
+Upload: 35.54 Mbit/s
