--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Mon Jan 12 02:40:05 AM JST 2026
+Mon Jan 12 02:45:05 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Homeplus (Daan District) [2100.77 km]: 67.767 ms
+Hosted by サーバーならDDPS.jp (Tokyo) [0.91 km]: 41.737 ms
 Testing download speed................................................................................
-Download: 80.22 Mbit/s
+Download: 36.29 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 36.62 Mbit/s
+Upload: 10.74 Mbit/s
