--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Mon Jan 12 05:40:06 AM JST 2026
+Mon Jan 12 05:45:03 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 37.306 ms
+Hosted by Kairun Services (Chiba) [38.77 km]: 46.929 ms
 Testing download speed................................................................................
-Download: 170.92 Mbit/s
+Download: 189.38 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 38.09 Mbit/s
+Upload: 38.83 Mbit/s
