--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Mon Jan 12 05:55:05 AM JST 2026
+Mon Jan 12 06:05:05 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 40.487 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 38.603 ms
 Testing download speed................................................................................
-Download: 205.33 Mbit/s
+Download: 149.80 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 39.94 Mbit/s
+Upload: 39.09 Mbit/s
