--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Mon Jan 12 06:10:06 AM JST 2026
+Mon Jan 12 06:15:05 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 34.166 ms
+Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 41.037 ms
 Testing download speed................................................................................
-Download: 147.92 Mbit/s
+Download: 81.70 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 37.60 Mbit/s
+Upload: 39.63 Mbit/s
