--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Mon Jan 12 06:45:06 AM JST 2026
+Mon Jan 12 06:50:06 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.5)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 37.174 ms
+Hosted by サーバーならDDPS.jp (Tokyo) [0.91 km]: 39.126 ms
 Testing download speed................................................................................
-Download: 159.85 Mbit/s
+Download: 51.01 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 39.63 Mbit/s
+Upload: 14.74 Mbit/s
