--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Mon Jan 12 07:55:05 AM JST 2026
+Mon Jan 12 08:10:11 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.242.59)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Nearoute Limited (Tokyo) [395.69 km]: 36.018 ms
+Hosted by Contabo (Tokyo) [395.69 km]: 44.448 ms
 Testing download speed................................................................................
-Download: 116.39 Mbit/s
+Download: 103.19 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 35.80 Mbit/s
+Upload: 32.25 Mbit/s
