--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Mon Jan 12 09:20:03 AM JST 2026
+Mon Jan 12 09:25:04 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.242.59)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Contabo (Tokyo) [395.69 km]: 38.96 ms
+Hosted by Nearoute Limited (Tokyo) [395.69 km]: 41.298 ms
 Testing download speed................................................................................
-Download: 69.28 Mbit/s
+Download: 137.11 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 24.21 Mbit/s
+Upload: 31.06 Mbit/s
