--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Mon Jan 12 10:50:03 AM JST 2026
+Mon Jan 12 10:55:02 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.51.43)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Contabo (Tokyo) [0.91 km]: 51.332 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 57.24 ms
 Testing download speed................................................................................
-Download: 4.97 Mbit/s
+Download: 4.84 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 10.30 Mbit/s
+Upload: 9.98 Mbit/s
