--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Mon Jan 12 05:55:02 PM JST 2026
+Mon Jan 12 06:10:05 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.51.43)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by GSL Networks (Tokyo) [0.91 km]: 61.519 ms
+Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 60.072 ms
 Testing download speed................................................................................
-Download: 4.82 Mbit/s
+Download: 4.41 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 6.19 Mbit/s
+Upload: 7.20 Mbit/s
