--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Mon Jan 12 09:45:05 PM JST 2026
+Mon Jan 12 09:50:07 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.51.43)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Sanda) [418.45 km]: 59.053 ms
+Hosted by Contabo (Tokyo) [0.91 km]: 536.118 ms
 Testing download speed................................................................................
-Download: 2.53 Mbit/s
+Download: 1.87 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 4.42 Mbit/s
+Upload: 4.39 Mbit/s
