--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Mon Jan 12 10:20:04 PM JST 2026
+Mon Jan 12 10:25:04 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.51.43)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by SoftEther Corporation (Tsukuba) [51.14 km]: 56.927 ms
+Hosted by Contabo (Tokyo) [0.91 km]: 54.084 ms
 Testing download speed................................................................................
-Download: 5.64 Mbit/s
+Download: 6.09 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 6.78 Mbit/s
+Upload: 8.04 Mbit/s
