--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Mon Jan 12 11:10:04 PM JST 2026
+Mon Jan 12 11:15:04 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.51.43)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by SoftEther Corporation (Tsukuba) [51.14 km]: 51.551 ms
+Hosted by Contabo (Tokyo) [0.91 km]: 55.57 ms
 Testing download speed................................................................................
-Download: 3.87 Mbit/s
+Download: 3.91 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 7.25 Mbit/s
+Upload: 8.60 Mbit/s
