--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Tue Jan 13 12:10:04 AM JST 2026
+Tue Jan 13 12:15:04 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.51.43)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by MOACK Data Center (Yongin-si) [1130.16 km]: 97.7 ms
+Hosted by Contabo (Tokyo) [0.91 km]: 54.631 ms
 Testing download speed................................................................................
-Download: 3.68 Mbit/s
+Download: 4.04 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 10.48 Mbit/s
+Upload: 9.28 Mbit/s
