--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Tue Jan 13 12:55:05 AM JST 2026
+Tue Jan 13 01:10:03 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.51.43)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 72.55 ms
+Hosted by サーバーならDDPS.jp (Tokyo) [0.91 km]: 61.999 ms
 Testing download speed................................................................................
-Download: 4.54 Mbit/s
+Download: 5.75 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 12.27 Mbit/s
+Upload: 5.59 Mbit/s
